[gd_scene load_steps=48 format=3 uid="uid://dg8kglppy6wgi"]

[ext_resource type="Script" path="res://BattleEngine/Fight_Manager/Enemies/Papyrus/dtpapyrus.gd" id="1_0v5i0"]
[ext_resource type="Texture2D" uid="uid://bofjqo87ah3x4" path="res://BattleEngine/Fight_Manager/Enemies/Papyrus/leg.png" id="4_l7txn"]
[ext_resource type="Texture2D" uid="uid://k5qfw7q1saay" path="res://BattleEngine/Fight_Manager/Enemies/Papyrus/body.png" id="5_i64kk"]
[ext_resource type="Texture2D" uid="uid://b6sv634lhkpm7" path="res://BattleEngine/Fight_Manager/Enemies/Papyrus/handR.png" id="5_ux4d0"]
[ext_resource type="Texture2D" uid="uid://bbcsx24gsothn" path="res://BattleEngine/Fight_Manager/Enemies/Papyrus/handL.png" id="7_mc1em"]
[ext_resource type="Texture2D" uid="uid://bjyk8d7nk60lj" path="res://BattleEngine/Fight_Manager/Enemies/Papyrus/heads.png" id="8_xh8pf"]
[ext_resource type="AudioStream" uid="uid://bkbqbdsdtvatl" path="res://BattleEngine/Fight_Manager/Enemies/Papyrus/paptusloop.wav" id="9_3dtug"]
[ext_resource type="AudioStream" uid="uid://ch26qhhqq6xlw" path="res://BattleEngine/Fight_Manager/Enemies/Papyrus/paptusintro.wav" id="10_sshhn"]
[ext_resource type="AudioStream" uid="uid://dkn28mjihpymv" path="res://BattleEngine/Fight_Manager/Enemies/Papyrus/paptusend.wav" id="11_3g6c1"]
[ext_resource type="AudioStream" uid="uid://bhai5dt104pmv" path="res://BattleEngine/sfx/battle_noise.wav" id="12_q8msu"]
[ext_resource type="AudioStream" uid="uid://mxxai3ehnib3" path="res://BattleEngine/sfx/mus_sfx_swipe.wav" id="13_bxtkg"]
[ext_resource type="AudioStream" uid="uid://celgg0c7gujrh" path="res://Shared/Text/Clicks/Files/papyrus.wav" id="23_njl06"]
[ext_resource type="FontFile" uid="uid://dljk66yw4ejc2" path="res://Fonts/papyrus.ttf" id="24_p7xcp"]
[ext_resource type="Texture2D" uid="uid://1hnj4eaoawfv" path="res://BattleEngine/Bubble/bubble_1.png" id="27_w6xn1"]
[ext_resource type="Texture2D" uid="uid://bia0tast40pnk" path="res://BattleEngine/Bubble/bubble_2.png" id="28_hwu6s"]
[ext_resource type="Texture2D" uid="uid://cm5va8tkbbc8t" path="res://BattleEngine/Bubble/bubble_3.png" id="29_44uii"]
[ext_resource type="Texture2D" uid="uid://gqhcfgxi43iw" path="res://BattleEngine/Bubble/bubble_4.png" id="30_camw8"]
[ext_resource type="Texture2D" uid="uid://bmpv64ft4wtni" path="res://BattleEngine/Bubble/bubble_5.png" id="31_3wnmw"]
[ext_resource type="Texture2D" uid="uid://8467oxsbgo80" path="res://BattleEngine/Bubble/bubble_6.png" id="32_vw5kr"]
[ext_resource type="Texture2D" uid="uid://di00hs2uxyq5q" path="res://BattleEngine/Bubble/bubble_7.png" id="33_rwy2m"]
[ext_resource type="Texture2D" uid="uid://c3afcp8cj3y1c" path="res://BattleEngine/Bubble/bubble_8.png" id="34_aueql"]

[sub_resource type="SpriteFrames" id="SpriteFrames_iqbil"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_l7txn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_g02yb"]
atlas = ExtResource("5_ux4d0")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvyej"]
atlas = ExtResource("5_ux4d0")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvhpo"]
atlas = ExtResource("5_ux4d0")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l7tx"]
atlas = ExtResource("5_ux4d0")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rtdl"]
atlas = ExtResource("5_ux4d0")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlway"]
atlas = ExtResource("5_ux4d0")
region = Rect2(128, 128, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_rb11r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g02yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvyej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvhpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l7tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rtdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlway")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_dited"]
atlas = ExtResource("5_i64kk")
region = Rect2(0, 0, 41, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_fta5b"]
atlas = ExtResource("5_i64kk")
region = Rect2(41, 0, 41, 76)

[sub_resource type="SpriteFrames" id="SpriteFrames_167ov"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dited")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fta5b")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_5yc20"]
atlas = ExtResource("7_mc1em")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_to4hh"]
atlas = ExtResource("7_mc1em")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvc5d"]
atlas = ExtResource("7_mc1em")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbeq0"]
atlas = ExtResource("7_mc1em")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyukr"]
atlas = ExtResource("7_mc1em")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bemjp"]
atlas = ExtResource("7_mc1em")
region = Rect2(128, 128, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ek5yt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yc20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_to4hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvc5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbeq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyukr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bemjp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ikglv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fl2nm"]
atlas = ExtResource("8_xh8pf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxa7g"]
atlas = ExtResource("8_xh8pf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpb48"]
atlas = ExtResource("8_xh8pf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyh3f"]
atlas = ExtResource("8_xh8pf")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_84i17"]
atlas = ExtResource("8_xh8pf")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_b3dd3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl2nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxa7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpb48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyh3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84i17")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_8sw4k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_w6xn1")
}, {
"duration": 1.0,
"texture": ExtResource("28_hwu6s")
}, {
"duration": 1.0,
"texture": ExtResource("29_44uii")
}, {
"duration": 1.0,
"texture": ExtResource("30_camw8")
}, {
"duration": 1.0,
"texture": ExtResource("31_3wnmw")
}, {
"duration": 1.0,
"texture": ExtResource("32_vw5kr")
}, {
"duration": 1.0,
"texture": ExtResource("33_rwy2m")
}, {
"duration": 1.0,
"texture": ExtResource("34_aueql")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[node name="boss" type="Node2D"]
script = ExtResource("1_0v5i0")
debugattack = 7

[node name="Sprites" type="CharacterBody2D" parent="."]
position = Vector2(-9, 0)
scale = Vector2(1.5, 1.5)
collision_layer = 4
collision_mask = 4

[node name="Leg" type="AnimatedSprite2D" parent="Sprites"]
light_mask = 4
position = Vector2(-1.33333, 55.3333)
sprite_frames = SubResource("SpriteFrames_iqbil")
offset = Vector2(-0.5, 0)

[node name="Upper" type="Node2D" parent="Sprites"]
position = Vector2(0, 1)

[node name="R_arm" type="AnimatedSprite2D" parent="Sprites/Upper"]
light_mask = 4
position = Vector2(11.3333, -0.333333)
sprite_frames = SubResource("SpriteFrames_rb11r")
offset = Vector2(37, 13)

[node name="Body" type="AnimatedSprite2D" parent="Sprites/Upper"]
light_mask = 4
position = Vector2(2.667, -3.2)
sprite_frames = SubResource("SpriteFrames_167ov")

[node name="L_arm" type="AnimatedSprite2D" parent="Sprites/Upper"]
light_mask = 4
position = Vector2(-8, -3)
sprite_frames = SubResource("SpriteFrames_ek5yt")
offset = Vector2(-3.84, 14.84)

[node name="Upper2" type="Node2D" parent="Sprites"]
position = Vector2(0, 1)

[node name="Head" type="AnimatedSprite2D" parent="Sprites/Upper2"]
light_mask = 4
material = SubResource("ShaderMaterial_ikglv")
position = Vector2(4.333, -15)
sprite_frames = SubResource("SpriteFrames_b3dd3")
frame = 1
offset = Vector2(-0.15, 0)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_3dtug")

[node name="Intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_sshhn")

[node name="End" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_3g6c1")

[node name="SfxBlock" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_q8msu")

[node name="SfxBlock2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_bxtkg")

[node name="Speech" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 38.0
offset_top = -50.0
offset_right = 124.0
offset_bottom = 20.0

[node name="Bubble" type="AnimatedSprite2D" parent="Speech"]
modulate = Color(0.439216, 0.439216, 0.439216, 0.886275)
light_mask = 5
position = Vector2(59, 45)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_8sw4k")
frame = 2

[node name="SpeechSound" type="AudioStreamPlayer" parent="Speech"]
stream = ExtResource("23_njl06")

[node name="RichTextLabel" type="RichTextLabel" parent="Speech"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0930233
anchor_top = 0.242857
anchor_right = 1.44186
anchor_bottom = 1.04286
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/table_odd_row_bg = Color(0, 0, 0, 1)
theme_override_colors/table_even_row_bg = Color(0, 0, 0, 1)
theme_override_colors/table_border = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("24_p7xcp")
theme_override_font_sizes/normal_font_size = 11
theme_override_font_sizes/bold_font_size = 12
theme_override_font_sizes/mono_font_size = 10
bbcode_enabled = true
text = "TEST"
scroll_active = false
visible_characters_behavior = 1
metadata/_edit_use_anchors_ = true

[node name="DebugLabel" type="Label" parent="Speech"]
visible = false
layout_mode = 0
offset_left = -37.0
offset_top = -77.0
offset_right = 3.0
offset_bottom = -54.0
